--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -3,21 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     tools:context="me.eigenein.arduinocar.MainActivity">
 
-    <ninja.eigenein.joypad.JoypadView
+    <android.support.v7.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/card_view_layout_margin"
         app:layout_constraintDimensionRatio="H, 1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:inner_color="@color/primary"
-        app:outer_color="@color/primary"
-        app:moveable_color="@color/accent"
-        app:directions_color="@android:color/white"/>
+        card_view:cardCornerRadius="@dimen/card_view_corner_radius"
+        card_view:contentPadding="@dimen/card_view_content_padding">
+
+        <ninja.eigenein.joypad.JoypadView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:inner_color="@color/primary"
+            app:outer_color="@color/primary"
+            app:moveable_color="@color/accent"
+            app:directions_color="@color/primary_light"/>
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
