--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#3F51B5</color>
-    <color name="primary_dark">#303F9F</color>
-    <color name="accent">#FF4081</color>
+    <color name="primary">#3f51b5</color>
+    <color name="primary_dark">#002984</color>
+    <color name="primary_light">#757de8</color>
+    <color name="accent">#ff4081</color>
 </resources>
