--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,23 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
     tools:context="me.eigenein.arduinocar.MainActivity">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view_radar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/card_view_layout_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/card_view_joypad"
+        card_view:cardCornerRadius="@dimen/card_view_corner_radius"
+        card_view:contentPadding="@dimen/card_view_content_padding">
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view_joypad"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="@dimen/card_view_layout_margin"
@@ -21,6 +34,7 @@
         card_view:contentPadding="@dimen/card_view_content_padding">
 
         <ninja.eigenein.joypad.JoypadView
+            android:id="@+id/joypad_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:inner_color="@color/primary"
