--- a/android/app/src/main/res/menu/menu_main.xml
+++ b/android/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_main_device_name"
+        android:showAsAction="ifRoom"
+        android:title=""
+        android:enabled="false"/>
+    <item
+        android:id="@+id/menu_main_vcc"
+        android:showAsAction="ifRoom"
+        android:title=""
+        android:enabled="false"/>
+    <item
         android:id="@+id/menu_main_connect"
         android:title="@string/menu_item_connect"
         android:showAsAction="ifRoom"
